[package]
name = "bevy_gpui"
version = "0.1.0"
rust-version = "1.95.0"
description = "Retained-mode GPUI overlays for Bevy applications"
documentation = "https://docs.rs/bevy_gpui"
license = "MIT"
edition = "2024"
publish = false
autoexamples = false
exclude = ["assets/**/*"]

[package.metadata.docs.rs]
features = ["x11"]

[features]
default = ["render", "picking", "font-kit", "wayland", "x11", "windows-manifest"]
render = [
    "dep:bevy_asset",
    "dep:bevy_core_pipeline",
    "dep:bevy_image",
    "dep:bevy_render",
    "dep:bevy_ui_render",
]
picking = ["dep:bevy_picking"]
font-kit = ["gpui/font-kit"]
wayland = ["gpui/wayland"]
x11 = ["gpui/x11"]
windows-manifest = ["gpui/windows-manifest"]

[[example]]
name = "getting_started"
path = "examples/getting_started.rs"

[[example]]
name = "overlay_3d"
path = "examples/overlay_3d.rs"

[[example]]
name = "multi_window"
path = "examples/multi_window.rs"

[[example]]
name = "render_to_texture"
path = "examples/render_to_texture.rs"

[[example]]
name = "text_input"
path = "examples/text_input.rs"

[[example]]
name = "lifecycle"
path = "examples/lifecycle.rs"

[[example]]
name = "hdr_overlay"
path = "examples/hdr_overlay.rs"

[dependencies]
anyhow = "1"
arboard = "3"
bevy_app = { version = "0.19" }
bevy_asset = { version = "0.19", optional = true }
bevy_camera = { version = "0.19" }
bevy_core_pipeline = { version = "0.19", optional = true }
bevy_ecs = { version = "0.19" }
bevy_input = { version = "0.19" }
bevy_image = { version = "0.19", optional = true }
bevy_log = { version = "0.19" }
bevy_math = { version = "0.19" }
bevy_picking = { version = "0.19", optional = true }
bevy_render = { version = "0.19", optional = true }
bevy_tasks = { version = "0.19" }
bevy_ui_render = { version = "0.19", optional = true }
bevy_window = { version = "0.19" }
bevy_winit = { version = "0.19" }
gpui = { path = "vendor/gpui-ce/crates/gpui", default-features = false }
gpui_wgpu = { path = "vendor/gpui-ce/crates/gpui_wgpu" }
futures = "0.3"
futures-timer = "3"
raw-window-handle = "0.6"
open = "5"
uuid = "1"

[dev-dependencies]
bevy = { version = "0.19" }
